<resources>
    <string name="app_name">KitchenStory</string>
    <string name="instruction">empty\n</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type_in_your_email">Type in your Email</string>
    <string name="type_in_your_password">Type in your Password</string>
    <string name="retype_your_password">Retype your password</string>
    <string name="already_registered">Already Registered!</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="not_registered">Not Registered!</string>
    <string name="type_your_ingredient">Type your ingredient</string>
</resources>